<resources>
    <string name="app_name">finalProject</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="add_text">Add</string>
    <string name="find_text">Find</string>
    <string name="asc_string">Asc</string>
    <string name="desc_string">Desc</string>
    <string name="nameHint">Enter name</string>
    <string name="numberHint">Enter number</string>
    <string name="deleteButton">Delete</string>
</resources>